[package]
edition      = "2024"
name         = "esp_wifi"
rust-version = "1.88"
version      = "0.1.0"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32", "unstable"] }

esp-rtos = { version = "0.3.0", features = ["embassy", "esp32"] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32"] }

embassy-executor = { version = "0.10.0", features = [] }
embassy-time     = "0.5.0"

critical-section = "1.2.0"
static_cell      = "2.1.1"
esp-println = { version = "0.17.0", features = ["esp32"] }
embedded-hal = "1.0.0"
vl53l0x-simple = "0.2.0"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
